--- a/app/src/main/res/menu/activity_dashboard_drawer.xml
+++ b/app/src/main/res/menu/activity_dashboard_drawer.xml
@@ -10,23 +10,36 @@
         <item
             android:id="@+id/nav_upload_document"
             android:icon="@drawable/ic_file_upload_black_24dp"
-            android:title="Upload Documents" />
+            android:title="@string/upload_documents" />
         <item
             android:id="@+id/nav_search"
             android:icon="@drawable/ic_search_black_24dp"
-            android:title="Search" />
+            android:title="@string/search" />
         <item
             android:id="@+id/nav_add_money"
             android:icon="@drawable/ic_add_black_24dp"
-            android:title="Add Money" />
+            android:title="@string/add_money" />
 
         <item
             android:id="@+id/nav_transfer"
             android:icon="@drawable/ic_transfer_within_a_station_black_24dp"
-            android:title="Transfer Money" />
+            android:title="@string/transfer_money" />
+
         <item
             android:id="@+id/nav_history"
             android:icon="@drawable/ic_history_black_24dp"
-            android:title="Transaction History" />
+            android:title="@string/transaction_history" />
+
+        <item
+            android:id="@+id/nav_search_map"
+            android:icon="@drawable/ic_history_black_24dp"
+            android:title="@string/search_on_map" />
+
+        <item
+            android:id="@+id/nav_loan"
+            android:icon="@drawable/ic_description_black_24dp"
+            android:title="@string/loan" />
+
+
     </group>
 </menu>
