--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -47,7 +47,9 @@
                 android:id="@+id/txtMobile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/enter_mobile_number" />
+                android:hint="@string/enter_mobile_number"
+                android:inputType="number"
+                android:maxLength="10" />
 
         </android.support.design.widget.TextInputLayout>
 
