--- a/app/src/main/res/layout/activity_sms_verification.xml
+++ b/app/src/main/res/layout/activity_sms_verification.xml
@@ -20,6 +20,7 @@
         <android.support.design.widget.TextInputEditText
             android:id="@+id/txtEnterOTP"
             android:layout_width="match_parent"
+            android:inputType="number"
             android:layout_height="wrap_content"
             android:hint="@string/enter_otp_to_verify" />
 
