--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -182,6 +182,19 @@
         </android.support.design.widget.TextInputLayout>
 
 
+        <CheckBox
+            android:id="@+id/chkAdmin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/admin"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword" />
+
+
         <Button
             android:id="@+id/btnUploadUid"
             android:layout_width="match_parent"
@@ -190,7 +203,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:text="@string/upload_uid"
-            app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword" />
+            app:layout_constraintTop_toBottomOf="@+id/chkAdmin" />
 
 
         <Button
