--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -22,6 +22,7 @@
             android:id="@+id/txtSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:imeOptions="actionSearch"
             android:drawableRight="@drawable/ic_search_black_24dp"
             android:gravity="center_vertical"
             android:hint="@string/search_file_by_name" />
