--- a/app/src/main/res/layout/fragment_loan.xml
+++ b/app/src/main/res/layout/fragment_loan.xml
@@ -20,6 +20,27 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/tilLoanAmount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spnLoanReasons">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/txtLoanAmount"
+            android:layout_width="match_parent"
+            android:inputType="numberDecimal"
+            android:layout_height="wrap_content"
+            android:hint="@string/enter_amount" />
+
+    </android.support.design.widget.TextInputLayout>
+
+
     <Button
         android:id="@+id/btnUploadQrImage"
         android:layout_width="match_parent"
@@ -30,7 +51,7 @@
         android:text="@string/upload_qr_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spnLoanReasons" />
+        app:layout_constraintTop_toBottomOf="@+id/tilLoanAmount" />
 
 
     <Button
