--- a/app/src/main/res/layout/upload_docs_fragment.xml
+++ b/app/src/main/res/layout/upload_docs_fragment.xml
@@ -57,4 +57,12 @@
         app:layout_constraintTop_toBottomOf="@id/btnUploadImage" />
 
 
+    <Button
+        android:id="@+id/btnSave"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/upload"
+        app:layout_constraintTop_toBottomOf="@id/lblImageTitle" />
+
+
 </android.support.constraint.ConstraintLayout>
