--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#458e64</color>
+    <color name="colorPrimaryDark">#4B9A6D</color>
+    <color name="colorAccent">#fdce202c</color>
+    <color name="colorGreenBlue">#99cc32</color>
+    <color name="colorPrimaryTitle">#00323d</color>
 </resources>
